--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,13 +3,14 @@
 }
 
 <div class="container mt-5">
-    @* <div class="d-flex justify-content-end mb-3">
-    <select id="filter" class="form-select w-25">
-    <option value="month">Mês</option>
-    <option value="quarter">Trimestre</option>
-    <option value="year">Ano</option>
-    </select>
-    </div> *@
+    <div class="d-flex align-items-center justify-content-end mb-3 gap-2">
+        <h5>Filtrar por: </h5>
+        <select id="filter" class="form-select w-25">
+            <option value="month">Mês</option>
+            <option value="quarter">Trimestre</option>
+            <option value="year">Ano</option>
+        </select>
+    </div>
 
     <!-- Indicadores -->
     <div class="grid__indicadores text-center mb-4">
