feat: migrations, criado apiService, logica para os indicadores, listagem de notas, dbContext, baseController

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -21,7 +21,7 @@
                 </div>
                 <div class="meta">
                     <div class="text relative">Notas emitidas</div>
-                    <div class="value" id="totalEmitidas">R$ 0,00</div>
+                    <div class="value" id="totalEmitidas">...</div>
                 </div>
             </div>
         </div>
@@ -32,7 +32,7 @@
                 </div>
                 <div class="meta">
                     <div class="text relative">Notas emitidas <small>(sem cobrança)</small></div>
-                    <div class="value" id="semCobranca">R$ 0,00</div>
+                    <div class="value" id="semCobranca">...</div>
                 </div>
             </div>
         </div>
@@ -43,7 +43,7 @@
                 </div>
                 <div class="meta">
                     <div class="text relative">Notas vencidas <small>(inadimplência)</small></div>
-                    <div class="value" id="inadimplencia">R$ 0,00</div>
+                    <div class="value" id="inadimplencia">...</div>
                 </div>
             </div>
         </div>
@@ -54,7 +54,7 @@
                 </div>
                 <div class="meta">
                     <div class="text relative">Notas a vencer</div>
-                    <div class="value" id="aVencer">R$ 0,00</div>
+                    <div class="value" id="aVencer">...</div>
                 </div>
             </div>
         </div>
@@ -65,7 +65,7 @@
                 </div>
                 <div class="meta">
                     <div class="text relative">Notas pagas</div>
-                    <div class="value" id="pagas">R$ 0,00</div>
+                    <div class="value" id="pagas">...</div>
                 </div>
             </div>
         </div>
@@ -85,9 +85,9 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/home/dashboard.js"></script>
+    <script src="~/js/dashboard/dashboard.js"></script>
 }
 
 @section Styles {
-    <link rel="stylesheet" href="~/css/home/dashboard.css" />
+    <link rel="stylesheet" href="~/css/dashboard/dashboard.css" />
 }
