--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -29,12 +29,12 @@
             <h5 class="pb-2">UneCont</h5>
             <ul class="navbar-nav flex-grow-1">
                 <li class="nav__item">
-                    <a class="nav-link text-white @((currentController == "Home" && currentAction == "Index") ? "fw-bold" : "")"
-                        asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
+                    <a class="nav-link text-white @((currentController == "Dashboard" && currentAction == "Index") ? "fw-bold" : "")"
+                        asp-area="" asp-controller="Dashboard" asp-action="Index">Dashboard</a>
                 </li>
                 <li class="nav__item">
-                    <a class="nav-link text-white @((currentController == "Home" && currentAction == "Notes") ? "fw-bold" : "")"
-                        asp-area="" asp-controller="Home" asp-action="Notes">Lista de Notas</a>
+                    <a class="nav-link text-white @((currentController == "Notes" && currentAction == "Index") ? "fw-bold" : "")"
+                        asp-area="" asp-controller="Notes" asp-action="Index">Lista de Notas</a>
                 </li>
             </ul>
         </div>
@@ -44,7 +44,7 @@
                 <div class="d-flex align-items-center gap-2">
                     <div id="openSidebar"><i class="fa-solid fa-bars"></i></div>
                     <div class="container-fluid">
-                        <a class="navbar-brand fw-bold" asp-area="" asp-controller="Home"
+                        <a class="navbar-brand fw-bold" asp-area="" asp-controller="Dashboard"
                             asp-action="Index">@ViewData["Title"]</a>
                     </div>
                 </div>
@@ -60,12 +60,14 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - UneCont - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2024 - UneCont - <a asp-area="" asp-controller="Dashboard" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/js/apiService.js" asp-append-version="true"></script>
+    <script src="~/js/utils.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 
