--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -74,11 +74,23 @@
     <!-- Gráficos -->
     <div class="grid__graficos gap-4">
         <div class="w-full card__graficos bg-light py-3 px-2">
-            <h4 class="px-3">Evolução da Inadimplência</h4>
+            <div class="d-flex justify-content-between pt-2 pb-4">
+                <h4 class="px-3">Evolução da Inadimplência</h4>
+                <select id="filterYearInadimplencia">
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                </select>
+            </div>
             <div id="inadimplenciaChart"></div>
         </div>
         <div class="w-full card__graficos bg-light py-3 px-2">
-            <h4 class="px-3">Evolução da Receita recebida</h4>
+            <div class="d-flex justify-content-between pt-2 pb-4">
+                <h4 class="px-3">Evolução da Receita recebida</h4>
+                <select id="filterYearReceita">
+                    <option value="2023">2023</option>
+                    <option value="2024">2024</option>
+                </select>
+            </div>
             <div id="receitaChart"></div>
         </div>
     </div>
