feat: filtros em tabela, tabela com dataTables, ajuste na logica dos filtros notes/list

--- a/Views/Dashboard/Index.cshtml
+++ b/Views/Dashboard/Index.cshtml
@@ -34,10 +34,10 @@
         <div id="filterQuarter" class="filterInput filter__quarter" style="display:none;">
             <label class="fw-bold absolute">Trimeste:</label>
             <select id="filterIndicatorsQuarter" class="form-select w-full">
-                <option value="1">01</option>
-                <option value="2">02</option>
-                <option value="3">03</option>
-                <option value="4">04</option>
+                <option value="1">1º</option>
+                <option value="2">2º</option>
+                <option value="3">3º</option>
+                <option value="4">4º</option>
             </select>
         </div>
     </div>
