--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -3,33 +3,39 @@
 }
 <div class="container mt-5">
     <div class="w-full card__tables bg-light">
-        <div class="title">Lista de Notas</div>
-        <table class="table">
+        <div class="title">@ViewData["Title"]</div>
+        <table id="notesTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
                 <tr>
-                    <th scope="col">First</th>
-                    <th scope="col">Last</th>
-                    <th scope="col">Handle</th>
+                    <th>Nome do pagador</th>
+                    <th>Data de emissão</th>
+                    <th>Data da cobrança</th>
+                    <th>Data do pagamento</th>
+                    <th>Valor</th>
+                    <th>Status</th>
+                </tr>
+                <tr>
+                    <th>--</th>
+                    <th><input type="date" id="issueDateFilter" class="form-control"></th>
+                    <th><input type="date" id="billingDateFilter" class="form-control"></th>
+                    <th><input type="date" id="paymentDateFilter" class="form-control"></th>
+                    <th>--</th>
+                    <th>
+                        <select id="statusFilter" class="form-select">
+                            <option value="-1">Todos</option>
+                            <option value="0">Emitidas</option>
+                            <option value="1">Cobrança realizada</option>
+                            <option value="2">Pagamento em atraso</option>
+                            <option value="3">Pagamento realizado</option>
+                        </select>
+                    </th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>Mark</td>
-                    <td>Otto</td>
-                    <td>mdo</td>
-                </tr>
-                <tr>
-                    <td>Jacob</td>
-                    <td>Thornton</td>
-                    <td>fat</td>
-                </tr>
-                <tr>
-                    <td colspan="2">Larry the Bird</td>
-                    <td>twitter</td>
-                </tr>
-            </tbody>
         </table>
     </div>
 </div>
 
 </div>
+@section Scripts {
+    <script src="~/js/notes/notes.js"></script>
+}
