--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -14,6 +14,14 @@ html {
     width: 25%;
 }
 
+.dataTables_wrapper .dataTables_length,
+.dataTables_wrapper .dataTables_filter,
+.dataTables_wrapper .dataTables_info,
+.dataTables_wrapper .dataTables_processing,
+.dataTables_wrapper .dataTables_paginate {
+    padding: 1rem;
+}
+
 @media (min-width: 768px) {
     html {
         font-size: 16px;
