--- a/Views/Notes/Index.cshtml
+++ b/Views/Notes/Index.cshtml
@@ -7,14 +7,18 @@
         <table id="notesTable" class="table table-striped table-bordered" style="width:100%">
             <thead>
                 <tr>
+                    <th>Nº</th>
                     <th>Nome do pagador</th>
                     <th>Data de emissão</th>
                     <th>Data da cobrança</th>
                     <th>Data do pagamento</th>
                     <th>Valor</th>
                     <th>Status</th>
+                    <th>NF</th>
+                    <th>Boleto</th>
                 </tr>
                 <tr>
+                    <th>--</th>
                     <th>--</th>
                     <th><input type="date" id="issueDateFilter" class="form-control"></th>
                     <th><input type="date" id="billingDateFilter" class="form-control"></th>
@@ -29,12 +33,13 @@
                             <option value="3">Pagamento realizado</option>
                         </select>
                     </th>
+                    <th>--</th>
+                    <th>--</th>
                 </tr>
             </thead>
         </table>
     </div>
 </div>
-
 </div>
 @section Scripts {
     <script src="~/js/notes/notes.js"></script>
