--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -22,6 +22,26 @@ html {
     padding: 1rem;
 }
 
+.icon__user {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    background-color: #00000033;
+    border-radius: 50%;
+}
+
+.icon__user i {
+    color: #4d73a7;
+    font-size: 1.2rem;
+}
+
+.icon__document {
+    cursor: pointer;
+    font-size: 1.4rem;
+}
+
 @media (min-width: 768px) {
     html {
         font-size: 16px;
